Fix mobile scrollbar bug

--- a/static/styles/general_form_page.css
+++ b/static/styles/general_form_page.css
@@ -188,6 +188,7 @@ body {
 
     .content-wrapper {
         display: flex;
+        height: max-content;
         width: 100%;
     }
 
